<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical">

    <!-- titre episode !-->
    <EditText
        android:id="@+id/editTitre"
        style="@style/DefaultTextStyle"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/modification_titreEpisode_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105"
        tools:layout_editor_absoluteX="0dp" />

    <!-- description episode !-->
    <EditText
        android:id="@+id/editDescription"
        style="@style/DefaultTextStyle"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/modification_descriptionEpisode_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.419"
        tools:layout_editor_absoluteX="16dp" />

    <!-- liste de selection des saisons !-->
    <Spinner
        style="@style/DefaultTextStyle"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:entries="@array/modification_saison"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.274"
        tools:layout_editor_absoluteX="16dp" />

    <!-- duree episode !-->
    <EditText
        android:id="@+id/editDuree"
        style="@style/DefaultTextStyle"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/modification_dureeEpisode_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.586"
        tools:layout_editor_absoluteX="0dp" />

    <!-- bouton confirmer !-->
    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@color/orange"
        android:text="@string/modification_confirm_button"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.754" />

</androidx.constraintlayout.widget.ConstraintLayout>

